Some tweaks and a new day

--- a/TicTacToe/style.css
+++ b/TicTacToe/style.css
@@ -1,3 +1,4 @@
+
 .main{
     margin: auto;
     width: 620px;
@@ -6,7 +7,7 @@
 }
 
 h1{
-    font-family: 'Concert One', cursive;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: rgb(104, 67, 67);
 }
 
@@ -17,7 +18,6 @@ body{
 }
 
 .grid{
-    place-items: center;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -30,8 +30,12 @@ body{
     height: 200px;
    margin-bottom: 5px;
    background-color: rgb(212, 218, 188);
-  
    
+}
+
+.scoreboard{
+    display: inline;
+    
 }
 
 .playerX{
