--- a/TicTacToe/style.css
+++ b/TicTacToe/style.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap');
 .main{
     margin: auto;
     width: 620px;
@@ -7,12 +7,13 @@
 }
 
 h1{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: rgb(104, 67, 67);
+    font-family: 'Montserrat', sans-serif;
+    color: #00FF84;
+
 }
 
 body{
-     background: linear-gradient(35deg, rgb(39, 153, 153), rgb(197, 146, 146));
+     background: #007BFF;
      background-size: auto;
      background-attachment: fixed;
 }
@@ -25,17 +26,21 @@ body{
     height: 610px;
 }
 
-.grid div{
+.grid > div{
     width: 200px;
     height: 200px;
    margin-bottom: 5px;
-   background-color: rgb(212, 218, 188);
+   background-color: #00FBFF;
+   border-radius: 10px;
    
 }
 
 .scoreboard{
-    display: inline;
-    
+}
+
+.scoreboard  div{
+   
+    display: inline-bloc;
 }
 
 .playerX{
