--- a/LastMessage/style.css
+++ b/LastMessage/style.css
@@ -1,12 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Padauk&display=swap');
 body{
     background-color: #DCDCF5;
 }
 
 .main{
     width: 400px;
-    height: 300px;
     margin: 0 auto;
     background-color: #f5f5dc;
     padding: 10px;
@@ -20,9 +19,18 @@ h4{
     
 }
 
+h5{
+    font-family: 'Padauk', sans-serif;
+    text-align: center;
+    font-size: 17px;
+    opacity: 0.5;
+
+}
+
 input{
     width: 300px;
     padding: 10px;
+    margin-bottom: 10px;
     border-radius: 4px;
     border: 3px solid #333;
     
@@ -30,7 +38,7 @@ input{
 }
 
 .messages{
-    list-style: none;
+    
     font-family: 'Montserrat', sans-serif;
 
 }
@@ -39,4 +47,16 @@ input{
     
     padding:10px 200px 10px 10px;
     background-color: #EAEAB4;
+    border-radius: 20px;
 }
+
+.submit{
+    padding: 10px;
+    border-radius: 5px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 15px;
+    color: white;
+    background-color: #EAB4EA;
+    border-style: none;
+}
+
