added dropshadow, looks more minimalist

--- a/LastMessage/style.css
+++ b/LastMessage/style.css
@@ -9,8 +9,13 @@ body{
     margin: 0 auto;
     background-color: #f5f5dc;
     padding: 10px;
-    
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
+    border-radius: 5px;
 }
+
+
+    
+
 
 h4{
     font-family: 'Montserrat', sans-serif;
@@ -32,26 +37,26 @@ input{
     padding: 10px;
     margin-bottom: 10px;
     border-radius: 4px;
-    border: 3px solid #333;
-    
-    
+    border-style: none;
+    border: 1px solid rgba(180, 180, 234, 0.164);
+    background-color: #EAEAB4;
+    font-size: 12px;
+    font-weight: 600; 
 }
 
 .messages{
-    
     font-family: 'Montserrat', sans-serif;
-
 }
 
 .message-item span{
-    
-    padding:10px 200px 10px 10px;
+    display: inline-block;
+    padding:10px;
     background-color: #EAEAB4;
-    border-radius: 20px;
+    border-radius: 10px;
 }
 
 .submit{
-    padding: 10px;
+    padding: 7px;
     border-radius: 5px;
     font-family: 'Montserrat', sans-serif;
     font-size: 15px;
@@ -59,4 +64,3 @@ input{
     background-color: #EAB4EA;
     border-style: none;
 }
-
