--- a/multiplication/style.css
+++ b/multiplication/style.css
@@ -1,26 +1,47 @@
-html{
-    box-sizing: border-box;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-  margin: 0;
-  padding: 0;
-}
-
-
 .main{
-    width: 100%;
-    max-width: 500px;
-    margin: 0 auto;
-    padding-left: 10px;
-    padding-right: 10px;
-    color: #333;
-    height: 90vh;
-    margin-top: 5vh;
-    margin-bottom: 5vh;
-    overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: #333;
+  height: 50vh;
+  margin-top: 10vh;
+  margin-bottom: 5vh;
+}
 
+h2{
+  padding-top: 20px;
+  text-align: center;
+  font-family: sans-serif;
+  color: white;
+  
+}
+
+
+
+input{
+    width: 200px;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 4px;
+    border-style: none;
+    border: 1px solid rgba(180, 180, 234, 0.164);
+    background-color: rgb(61, 61, 57);
+    font-size: 16px;
+    font-weight: 600; 
+    color: white;
+}
+
+.submit{
+  padding: 10px;
+    border-radius: 5px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 15px;
+    color: white;
+    background-color: rgb(73, 63, 73);
+    border-style: none;
 }
