--- a/multiplication/style.css
+++ b/multiplication/style.css
@@ -1,16 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@500&display=swap');
+
 .main{
+  width: 600px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
-  max-width: 500px;
   margin: 0 auto;
-  padding-left: 10px;
-  padding-right: 10px;
   background-color: #333;
-  height: 50vh;
+  padding:10px 0 30px 0;
   margin-top: 10vh;
   margin-bottom: 5vh;
+  border-radius: 5px;
 }
 
 h2{
@@ -20,8 +20,6 @@ h2{
   color: white;
   
 }
-
-
 
 input{
     width: 200px;
@@ -44,4 +42,11 @@ input{
     color: white;
     background-color: rgb(73, 63, 73);
     border-style: none;
+    font-weight: bold;
+}
+
+.output{
+  color: white;
+  font-family: 'Exo 2', sans-serif;
+  font-size: 18px;
 }
