--- a/LastMessage/style.css
+++ b/LastMessage/style.css
@@ -54,7 +54,7 @@ input{
     border-radius: 4px;
     border-style: none;
     background-color: var(--secondary-color);
-    font-size: 10px;
+    font-size: 12px;
     font-weight: 600;
     color: var(--text-color);
 }
@@ -137,3 +137,8 @@ input{
     border-radius: 50%;
   }
   
+  ::placeholder{
+    color: var(--text-color);
+    opacity: 0.5;
+
+  }
