--- a/RandomColor/style.css
+++ b/RandomColor/style.css
@@ -1,3 +1,12 @@
+body{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
 h1{
     font-family: monospace;
 }
