--- a/Day14-todo/style.css
+++ b/Day14-todo/style.css
@@ -49,7 +49,7 @@ body {
     margin-bottom: 10px;
     width: 100%;
     display: flex;
-    align-items: center;
+   align-items: center;
     justify-content: space-between;
   }
   
@@ -71,7 +71,7 @@ body {
   .tick {
     width: 30px;
     height: 30px;
-    border: 3px solid #333;
+    border: 2px solid #333;
     border-radius: 50%;
     display: inline-flex;
     justify-content: center;
@@ -80,7 +80,7 @@ body {
   }
   
   .tick::before {
-    content: '✓';
+    content: '✔';
     font-size: 20px;
     display: none;
   }
@@ -94,13 +94,11 @@ body {
     background-color: transparent;
     outline: none;
     cursor: pointer;
+    color: red;
+    font-size: 1rem;
+    font-weight: bold;
   }
   
-  .delete-todo i {
-    width: 30px;
-    height: 30px;
-    pointer-events: none;
-  }
 
   form {
     width: 100%;
@@ -112,8 +110,10 @@ body {
     width: 100%;
     padding: 10px;
     border-radius: 4px;
-    border: 3px solid #333;
-    
+    border: none;
+    outline: none;
+    font-size: 1rem;
+    background-color: #eee;
   }
 
 .material-icons {
@@ -135,4 +135,3 @@ body {
     text-rendering: optimizeLegibility;
   }
 
- 
