--- a/TicTacToe/style.css
+++ b/TicTacToe/style.css
@@ -1,57 +1,87 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap');
-.main{
-    margin: auto;
-    width: 620px;
-    height: 620px;
-    text-align: center;
-}
-
-h1{
-    font-family: 'Montserrat', sans-serif;
-    color: #00FF84;
-
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap'); */
+*{
+    margin: 0;
+    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body{
-     background: #007BFF;
-     background-size: auto;
-     background-attachment: fixed;
+    background: #007BFF;
+    height: 100vh;
+    display: flex;
 }
 
-.grid{
+
+.main{
+    margin: auto;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    width: 610px;
-    height: 610px;
+    flex-direction: column;
+    align-items: center;
+}
+
+.title{
+    font-family: 'Montserrat', sans-serif;
+    color: #00FF84;
+    font-weight: bold;
+    font-size: 1.75rem;
+    margin-bottom: 20px;
+}
+
+
+.grid{
+    display: grid;
+    grid-template-columns: 150px 150px 150px;
+    grid-template-rows: 150px 150px 150px;
+    gap: 10px;
+    margin-top: 20px;
 }
 
 .grid > div{
-    width: 200px;
-    height: 200px;
-   margin-bottom: 5px;
-   background-color: #00FBFF;
-   border-radius: 10px;
-   
+    width: 150px;
+    height: 150px;
+    background-color: #00FBFF;
+    border-radius: 10px;
 }
 
 .scoreboard{
+    display: flex;
+    margin-bottom: 20px;
+    align-items: center;
+    width: max-content;
 }
 
-.scoreboard  div{
-   
-    display: inline-bloc;
+.score-badge{
+    width: 200px;
+    height: 50px;
+    color: #007BFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+    border-radius: 40px;
+    font-size: 2rem;
+}
+
+.scorecount{
+    font-size: 3rem;
+    font-weight: bold;
+    color: #ffffff;
+}
+
+.playerx{
+    background-color: #00FBFF;
+}
+
+.playero{
+    background-color: #00FF84;
 }
 
 .playerX{
     background-image: url('theX.png');
-
-
 }
 
 .playerO{
     background-image: url('theO.png');
-
 }
 
 h3{
